# .dotfiles

./: .gitignore  configuration.nix  err.md  fish.nix  flake.nix  hardware-configuration.nix  home.nix  neomutt.nix  nvidia.nix  script-utils.nix  tmux.nix
modules/: boot.nix  hardware.nix
scripts/: convert-to-mov.fish  mov-to-mp4.fish  pdf_to_4k_images.fish  process_question.fish  replace-question-headers-numbers.fish  replace-question-headers.fish  splitmedia.fish  test.fish  toggle-darkmode.fish
scripts/__pycache__/: sat-ocr.d.er
scripts/python/: pyproject.toml  sorted_questions.md
scripts/python/scripts/: compile-test.py  prep-questions-for-training.py  sat-ocr-2.py  sat-ocr.py  update-frontmatter.py
scripts/python/scripts/__pycache__/: compile-test.d.er  prep-questions-for-training.d.er
